Mejora cambio de nombre a MIVIAP tambien en URL

--- a/test/sideex/iap-05-admin-crea-caso.html
+++ b/test/sideex/iap-05-admin-crea-caso.html
@@ -15,9 +15,9 @@
 </tr>
 <tr><td>clickAt</td><td>link=Casos<datalist><option>link=Casos</option><option>css=a.dropdown-toggle</option><option>//a[contains(text(),'Casos')]</option><option>//a[contains(@href, '#')]</option><option>//li/a</option></datalist></td><td>31,24</td>
 </tr>
-<tr><td>clickAt</td><td>link=Listado<datalist><option>link=Listado</option><option>css=a.dropdown-item</option><option>//a[contains(text(),'Listado')]</option><option>//div[@id='navbarSupportedContent']/ul/li/div/a</option><option>//a[contains(@href, '/iap/si/casos')]</option><option>//div/a</option></datalist></td><td>37,15</td>
+<tr><td>clickAt</td><td>link=Listado<datalist><option>link=Listado</option><option>css=a.dropdown-item</option><option>//a[contains(text(),'Listado')]</option><option>//div[@id='navbarSupportedContent']/ul/li/div/a</option><option>//a[contains(@href, '/iap/miviap/casos')]</option><option>//div/a</option></datalist></td><td>37,15</td>
 </tr>
-<tr><td>clickAt</td><td>link=Nuevo<datalist><option>link=Nuevo Caso</option><option>//a[contains(text(),'Nuevo Caso')]</option><option>//a[contains(@href, '/iap/sivel2/casos/nuevo')]</option><option>//li[2]/a</option><option>link=Nuevo</option></datalist></td><td>51,8</td>
+<tr><td>clickAt</td><td>link=Nuevo<datalist><option>link=Nuevo Caso</option><option>//a[contains(text(),'Nuevo Caso')]</option><option>//a[contains(@href, '/iap/miviapvel2/casos/nuevo')]</option><option>//li[2]/a</option><option>link=Nuevo</option></datalist></td><td>51,8</td>
 </tr>
 <tr><td>clickAt</td><td>id=caso_fecha_localizada<datalist><option>id=caso_fecha_localizada</option><option>name=caso[fecha_localizada]</option><option>css=#caso_fecha_localizada</option><option>//input[@id='caso_fecha_localizada']</option><option>//div[@id='basicos']/div/div/div/input</option><option>//div[2]/div/div/div/div/div/input</option></datalist></td><td>135,19</td>
 </tr>
@@ -59,7 +59,7 @@
 <tr><td rowspan="1" colspan="3">caso-ubicacion</td></tr>
 </thead>
 <tbody>
-<tr><td>clickAt</td><td>link=Editar<datalist><option>link=Editar</option><option>//a[contains(text(),'Editar')]</option><option>//a[contains(@href, '/iap/si/casos/174/edita')]</option><option>//div/div/a[2]</option></datalist></td><td>22,19</td>
+<tr><td>clickAt</td><td>link=Editar<datalist><option>link=Editar</option><option>//a[contains(text(),'Editar')]</option><option>//a[contains(@href, '/iap/miviap/casos/174/edita')]</option><option>//div/div/a[2]</option></datalist></td><td>22,19</td>
 </tr>
 <tr><td>clickAt</td><td>link=Ubicación<datalist><option>link=Ubicación</option><option>//a[contains(text(),'Ubicación')]</option><option>//form[@id='edit_caso_60']/div/div[2]/ul/li[2]/a</option><option>//a[contains(@href, '#ubicacion')]</option><option>//form/div/div[2]/ul/li[2]/a</option></datalist></td><td>73,17</td>
 </tr>
