--- a/test/sideex/iap-07-admin-eliminar-caso.html
+++ b/test/sideex/iap-07-admin-eliminar-caso.html
@@ -13,7 +13,7 @@
 <tbody>
 <tr><td>clickAt</td><td>id=navbarDropdownCasos<datalist><option>id=navbarDropdownCasos</option><option>link=Casos</option><option>css=#navbarDropdownCasos</option><option>//a[contains(text(),'Casos')]</option><option>//a[@id='navbarDropdownCasos']</option><option>//div[@id='navbarSupportedContent']/ul/li/a</option><option>//a[contains(@href, '#')]</option><option>//li/a</option></datalist></td><td>50,22</td>
 </tr>
-<tr><td>clickAt</td><td>link=Listado<datalist><option>link=Listado</option><option>css=a.dropdown-item</option><option>//a[contains(text(),'Listado')]</option><option>//div[@id='navbarSupportedContent']/ul/li/div/a</option><option>//a[contains(@href, '/iap/si/casos')]</option><option>//div/a</option></datalist></td><td>52,10</td>
+<tr><td>clickAt</td><td>link=Listado<datalist><option>link=Listado</option><option>css=a.dropdown-item</option><option>//a[contains(text(),'Listado')]</option><option>//div[@id='navbarSupportedContent']/ul/li/div/a</option><option>//a[contains(@href, '/iap/miviap/casos')]</option><option>//div/a</option></datalist></td><td>52,10</td>
 </tr>
 <tr><td>clickAt</td><td>id=filtro_q<datalist><option>id=filtro_q</option><option>name=filtro[q]</option><option>css=#filtro_q</option><option>//input[@id='filtro_q']</option><option>//input</option></datalist></td><td>69,13</td>
 </tr>
