--- a/test/sideex/iap-02-admin-crea-usuario.html
+++ b/test/sideex/iap-02-admin-crea-usuario.html
@@ -15,9 +15,9 @@
 </tr>
 <tr><td>clickAt</td><td>link=Administrar<datalist><option>link=Administrar</option><option>css=ul.nav.navbar-nav.navbar-right &gt; li.dropdown &gt; a.dropdown-toggle</option><option>//a[contains(text(),'Administrar')]</option><option>xpath=(//a[contains(@href, '#')])[2]</option><option>//ul[2]/li[2]/a</option></datalist></td><td>52,22</td>
 </tr>
-<tr><td>clickAt</td><td>link=Usuarios<datalist><option>link=Usuarios</option><option>//a[contains(text(),'Usuarios')]</option><option>xpath=(//a[contains(@href, '/iap/sivel2/usuarios')])[2]</option><option>//li[2]/ul/li[3]/a</option></datalist></td><td>56,11</td>
+<tr><td>clickAt</td><td>link=Usuarios<datalist><option>link=Usuarios</option><option>//a[contains(text(),'Usuarios')]</option><option>xpath=(//a[contains(@href, '/iap/miviapvel2/usuarios')])[2]</option><option>//li[2]/ul/li[3]/a</option></datalist></td><td>56,11</td>
 </tr>
-<tr><td>clickAt</td><td>link=Nuevo<datalist><option>link=Nuevo</option><option>css=a.btn.btn-primary</option><option>xpath=(//a[contains(text(),'Nuevo')])[2]</option><option>//a[contains(@href, '/iap/sivel2/usuarios/nuevo')]</option><option>//div[2]/a</option></datalist></td><td>55,3</td>
+<tr><td>clickAt</td><td>link=Nuevo<datalist><option>link=Nuevo</option><option>css=a.btn.btn-primary</option><option>xpath=(//a[contains(text(),'Nuevo')])[2]</option><option>//a[contains(@href, '/iap/miviapvel2/usuarios/nuevo')]</option><option>//div[2]/a</option></datalist></td><td>55,3</td>
 </tr>
 <tr><td>clickAt</td><td>id=usuario_nusuario<datalist><option>id=usuario_nusuario</option><option>name=usuario[nusuario]</option><option>css=#usuario_nusuario</option><option>//input[@id='usuario_nusuario']</option><option>//form[@id='new_usuario']/div[2]/input</option><option>//div[2]/input</option></datalist></td><td>137,9</td>
 </tr>
