--- a/test/sideex/iap-04-admin-elimina-usuario.html
+++ b/test/sideex/iap-04-admin-elimina-usuario.html
@@ -31,7 +31,7 @@
 </tr>
 <tr><td>chooseOkOnNextConfirmation</td><td><datalist><option></option></datalist></td><td></td>
 </tr>
-<tr><td>clickAt</td><td>link=Eliminar<datalist><option>link=Eliminar</option><option>css=a.btn.btn-danger</option><option>//a[contains(text(),'Eliminar')]</option><option>xpath=(//a[contains(@href, '/iap/sivel2/usuarios/2')])[2]</option><option>//a[3]</option></datalist></td><td>16,20</td>
+<tr><td>clickAt</td><td>link=Eliminar<datalist><option>link=Eliminar</option><option>css=a.btn.btn-danger</option><option>//a[contains(text(),'Eliminar')]</option><option>xpath=(//a[contains(@href, '/iap/miviapvel2/usuarios/2')])[2]</option><option>//a[3]</option></datalist></td><td>16,20</td>
 </tr>
 <tr><td>assertText</td><td>css=h1<datalist><option>css=h1</option><option>//h1</option></datalist></td><td>Usuarios</td>
 </tr>
