--- a/test/sideex/iap-03-admin-filtro-usuarios.html
+++ b/test/sideex/iap-03-admin-filtro-usuarios.html
@@ -49,15 +49,15 @@
 </tr>
 <tr><td>clickAt</td><td>name=filtrar<datalist><option>name=filtrar</option><option>css=input[name="filtrar"]</option><option>//input[@name='filtrar']</option><option>//td[11]/input</option></datalist></td><td>26,17</td>
 </tr>
-<tr><td>clickAt</td><td>css=div.input.string.required.filtro_busnombre<datalist><option>css=div.input.string.required.filtro_busnombre</option><option>//td[3]/div</option></datalist></td><td>1,25</td>
+<tr><td>clickAt</td><td>link=Seleccione una opción<datalist><option>link=Seleccione una opción</option><option>css=a.chosen-single.chosen-default</option><option>//div[@id='filtro_busnusuario_chosen']/a</option><option>//div/div/a</option></datalist></td><td>156,16</td>
+</tr>
+<tr><td>clickAt</td><td>link=aaa<datalist><option>link=aaa</option><option>css=a.chosen-single</option><option>//div[@id='filtro_busnusuario_chosen']/a</option><option>//div/div/a</option></datalist></td><td>44,13</td>
 </tr>
 <tr><td>type</td><td>id=filtro_busnombre<datalist><option>id=filtro_busnombre</option><option>name=filtro[busnombre]</option><option>css=#filtro_busnombre</option><option>//input[@id='filtro_busnombre']</option><option>//td[3]/div/input</option></datalist></td><td></td>
 </tr>
 <tr><td>clickAt</td><td>name=filtrar<datalist><option>name=filtrar</option><option>css=input[name="filtrar"]</option><option>//input[@name='filtrar']</option><option>//td[11]/input</option></datalist></td><td>34,22</td>
 </tr>
-<tr><td>assertText</td><td>css=h1<datalist><option>css=h1</option><option>//h1</option></datalist></td><td>Usuarios</td>
-</tr>
-<tr><td>runScript</td><td>$('.chosen-select').removeAttr('style'); $('.chosen-container').remove(); $('.chosen-select').removeClass('chosen-select')<datalist><option>$('.chosen-select').removeAttr('style'); $('.chosen-container').remove(); $('.chosen-select').removeClass('chosen-select')</option></datalist></td><td></td>
+<tr><td>assertText</td><td>id=numregistros<datalist><option>id=numregistros</option><option>css=#numregistros</option><option>//span[@id='numregistros']</option><option>//div[@id='div_contenido']/form/div/div[2]/span</option><option>//div[2]/span</option></datalist></td><td>1</td>
 </tr>
 </tbody></table>
 <table cellpadding="1" cellspacing="1" border="1">
