--- a/test/sideex/iap-10-admin-elimina-actividad.html
+++ b/test/sideex/iap-10-admin-elimina-actividad.html
@@ -11,9 +11,9 @@
 <tr><td rowspan="1" colspan="3">actividad-elimina</td></tr>
 </thead>
 <tbody>
-<tr><td>clickAt</td><td>id=navbarDropdownActividades_y_Proyectos<datalist><option>id=navbarDropdownActividades_y_Proyectos</option><option>link=Actividades y Proyectos</option><option>css=#navbarDropdownActividades_y_Proyectos</option><option>//a[contains(text(),'Actividades y Proyectos')]</option><option>//a[@id='navbarDropdownActividades_y_Proyectos']</option><option>//div[@id='navbarSupportedContent']/ul/li[2]/a</option><option>xpath=(//a[contains(@href, '#')])[2]</option><option>//li[2]/a</option></datalist></td><td>117,16</td>
+<tr><td>clickAt</td><td>id=navbarDropdownAcciones_de_IAP<datalist><option>id=navbarDropdownAcciones_de_IAP</option><option>link=Acciones de IAP</option><option>css=#navbarDropdownAcciones_de_IAP</option><option>//a[contains(text(),'Acciones de IAP')]</option><option>//a[@id='navbarDropdownAcciones_de_IAP']</option><option>//div[@id='navbarSupportedContent']/ul/li[2]/a</option><option>xpath=(//a[contains(@href, '#')])[2]</option><option>//li[2]/a</option></datalist></td><td>66,33</td>
 </tr>
-<tr><td>clickAt</td><td>link=Listado de Actividades<datalist><option>link=Listado de Actividades</option><option>css=div.dropdown-menu.show &gt; a.dropdown-item</option><option>//a[contains(text(),'Listado de Actividades')]</option><option>//div[@id='navbarSupportedContent']/ul/li[2]/div/a</option><option>//a[contains(@href, '/iap/ensayo/actividades')]</option><option>//li[2]/div/a</option></datalist></td><td>167,17</td>
+<tr><td>clickAt</td><td>link=Acciones<datalist><option>link=Acciones</option><option>link=Listado de Actividades</option><option>css=div.dropdown-menu.show &gt; a.dropdown-item</option><option>//a[contains(text(),'Listado de Actividades')]</option><option>//div[@id='navbarSupportedContent']/ul/li[2]/div/a</option><option>//a[contains(@href, '/iap/ensayo/actividades')]</option><option>//li[2]/div/a</option></datalist></td><td>123,8</td>
 </tr>
 <tr><td>clickAt</td><td>id=filtro_busnombre<datalist><option>id=filtro_busnombre</option><option>name=filtro[busnombre]</option><option>css=#filtro_busnombre</option><option>//input[@id='filtro_busnombre']</option><option>//td[3]/div/input</option></datalist></td><td>29,10</td>
 </tr>
