--- a/test/sideex/iap-07-admin-eliminar-caso.html
+++ b/test/sideex/iap-07-admin-eliminar-caso.html
@@ -15,11 +15,11 @@
 </tr>
 <tr><td>clickAt</td><td>link=Listado<datalist><option>link=Listado</option><option>css=a.dropdown-item</option><option>//a[contains(text(),'Listado')]</option><option>//div[@id='navbarSupportedContent']/ul/li/div/a</option><option>//a[contains(@href, '/iap/miviap/casos')]</option><option>//div/a</option></datalist></td><td>52,10</td>
 </tr>
-<tr><td>clickAt</td><td>id=filtro_q<datalist><option>id=filtro_q</option><option>name=filtro[q]</option><option>css=#filtro_q</option><option>//input[@id='filtro_q']</option><option>//input</option></datalist></td><td>69,13</td>
-</tr>
 <tr><td>type</td><td>id=filtro_q<datalist><option>id=filtro_q</option><option>name=filtro[q]</option><option>css=#filtro_q</option><option>//input[@id='filtro_q']</option><option>//input</option></datalist></td><td>aaa</td>
 </tr>
 <tr><td>clickAt</td><td>name=commit<datalist><option>name=commit</option><option>css=input[name="commit"]</option><option>//input[@name='commit']</option><option>//div[4]/input</option></datalist></td><td>45,21</td>
+</tr>
+<tr><td>assertText</td><td>id=numconscaso<datalist><option>id=numconscaso</option><option>css=#numconscaso</option><option>//span[@id='numconscaso']</option><option>//div[@id='div_contenido']/form/div/div/div[2]/span</option><option>//div[2]/span</option></datalist></td><td>1</td>
 </tr>
 <tr><td>chooseOkOnNextConfirmation</td><td><datalist><option></option></datalist></td><td></td>
 </tr>
